--- a/equle-frontend/src/components/main/Game.css
+++ b/equle-frontend/src/components/main/Game.css
@@ -20,3 +20,13 @@
     background-color: #282c34;
     color:whitesmoke;
 }
+
+.GameBoard{
+
+    height: 75%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+}
