--- a/equle-frontend/src/components/main/GameBoard/GuessRow.css
+++ b/equle-frontend/src/components/main/GameBoard/GuessRow.css
@@ -4,11 +4,15 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
 .Box{
-    width: 50px;
-    height:50px;
+    width: 8vh; 
+    height:8vh;
+
+    margin:5vh;
+    border: none;
+    text-align: center;
 }
