--- a/equle-frontend/src/components/main/Game.css
+++ b/equle-frontend/src/components/main/Game.css
@@ -1,13 +1,19 @@
 .Game{
-    height: 90%;
+    height: fit-content;
     width: 90%;
 
     border: 5px #282c34 solid;
     background-color: #a3a3a3;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .GameHeader{
-    height: 3%;
+    height: fit-content;
+    max-height: 3%;
+    min-width: 100%;
     max-width:100%;
 
     display: flex;
@@ -15,7 +21,8 @@
     align-items: center;
     justify-content: space-evenly;
 
-    padding:20px;
+    padding-top:20px;
+    padding-bottom: 20px;
 
     background-color: #282c34;
     color:whitesmoke;
@@ -23,7 +30,7 @@
 
 .GameBoard{
 
-    height: 75%;
+    height: fit-content;
 
     display: flex;
     flex-direction: column;
