--- a/equle-frontend/src/components/main/Game.css
+++ b/equle-frontend/src/components/main/Game.css
@@ -1,6 +1,6 @@
 .Game{
-    height: fit-content;
-    width: 90%;
+    height: 100%;
+    width: fit-content;
 
     border: 5px #282c34 solid;
     background-color: #a3a3a3;
@@ -30,10 +30,24 @@
 
 .GameBoard{
 
-    height: fit-content;
+    height: 80%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-content: space-evenly;
+}
+
+.GuessedNumbersRow{
+    height: 17%;
+    min-width:100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding-left:1vh;
+    padding-right: 1hv;
+
+    border-top: 2px solid #282c34;
 }
