--- a/equle-frontend/src/components/main/GameBoard/GuessedNumbers.css
+++ b/equle-frontend/src/components/main/GameBoard/GuessedNumbers.css
@@ -1,6 +1,6 @@
 .GuessedNumbers{
-    width: 99%;
-    height:100%;
+    width: auto;
+    height:fit-content;
 
     display: flex;
     flex-direction: row;
@@ -9,6 +9,5 @@
 
     padding:5px;
 
-    border: 2px solid #282c34;
     
 }
