--- a/equle-frontend/src/components/main/Main.css
+++ b/equle-frontend/src/components/main/Main.css
@@ -1,18 +1,21 @@
 .Main{
     width: 100%;
-    height: auto;
+    min-height: 100%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-between;
+    justify-content:flex-start;
 
     padding: 10px;
-    margin-left: 10vh;
+    
+
+    background-color: blueviolet;
 }
 
 #Title{
     font-size: x-large;
     color:#282c34;
     padding:2px;
+    margin-bottom:2%;
 }
