--- a/equle-frontend/src/App.css
+++ b/equle-frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
-  height: fit-content;
+  
   min-width: 100vh;
 
   display: flex;
@@ -14,3 +14,9 @@
   margin:0;
 }
 
+.Spacer{
+ 
+
+  background-color: red;
+
+}
