--- a/equle-frontend/src/components/main/Main.css
+++ b/equle-frontend/src/components/main/Main.css
@@ -1,13 +1,16 @@
 .Main{
     width: 100%;
-    min-height: 100%;
 
+    min-height: 100%;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:flex-start;
+    justify-content:center;
 
     padding: 10px;
+    padding-left:10%;
+    padding-right:10%;
     
     background-color: rgb(230, 226, 235);
 }
