--- a/equle-frontend/src/components/sidebar/Sidebar.css
+++ b/equle-frontend/src/components/sidebar/Sidebar.css
@@ -1,7 +1,7 @@
 .Sidebar-full{
     min-height: 100vh;
     
-    max-width: fit-content;
+    width: fit-content;
 
     display: flex;
     flex-direction: row;
@@ -26,8 +26,11 @@
     align-items: center;
     justify-content:space-between;
 
+    /*
     padding-top: 1vh;
     padding-bottom: 1vh;
+    */
+   
   }
 
 .Sidebar-btn{
@@ -38,7 +41,9 @@
 
     background-color: #282c34;
     background-size: cover;
-
+    
+    margin-top:10px;
+    margin-bottom:10px;
     border:none;
 }
 
@@ -47,44 +52,44 @@
 }
 
 #Sidebar-overlay-horz-btn{
-    background-image: url('C:\Users\Rudyd\Desktop\Coding Projects\Equle\equle-frontend\src\components\sidebar\menu_hamburger_icon.png');
+    background-image: url('./menu_hamburger_icon.png');
 }
 
 #Sidebar-leaderboard-btn{
-    background-image: url('C:\Users\Rudyd\Desktop\Coding Projects\Equle\equle-frontend\src\components\sidebar\leaderboard_icon.png');
+    background-image: url('./leaderboard_icon.png');
 }
 
 /*Extended Sidebar*/
 .Extended{
     /*width is 100 - .Sidebar width*/
-    width:fit-content;
-    height:auto;
+    min-width:auto;
+    max-height: 100vh;
 
     padding:2%;
 
     background-color: #a3a3a3;
-    border:5px solid #282c34;
+    border-right:2px solid #282c34;
     border-left-style: none;
 }
 
 .Textbox{
     min-height:100%;
 
-    width:100%;
+    width:calc(fit-content+100px);
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-    font-size: 1.5vw;
+    font-size: calc(6px + 2vmin);
 }
 
 .Heading{
-    font-size:1.75vw;
+    font-size: calc(6px + 2vmin);
 }
 
 .Rules{
     max-height: 60%;
 
-    font-size: 1.5vw;
+    font-size: calc(6px + 2vmin);
 }
