--- a/equle-frontend/src/components/main/Game.css
+++ b/equle-frontend/src/components/main/Game.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .GameHeader{
@@ -19,10 +21,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    text-align: center;
+    
     justify-content: space-evenly;
-
+    
     padding-top:20px;
     padding-bottom: 20px;
+
+   
 
     background-color: #282c34;
     color:whitesmoke;
