--- a/equle-frontend/src/components/main/GameHeader/TargetNumber.css
+++ b/equle-frontend/src/components/main/GameHeader/TargetNumber.css
@@ -3,5 +3,9 @@
     width: fit-content;
 
     text-align: center;
+
+    margin-left: 50%;
+    transform: translate(-50%);
+    
     padding:2px;
 }
