--- a/equle-frontend/src/components/main/GameOverOverlay.css
+++ b/equle-frontend/src/components/main/GameOverOverlay.css
@@ -3,7 +3,7 @@
     width: fit-content;
 
     position:absolute;
-    top:30vh;/*37%;*/
+    /*top:30vh;/*37%;*/
 
     display: flex;
     flex-direction: column;
@@ -16,14 +16,29 @@
     border:2px solid #282c34;
 }
 
-.GameOverButton{
-    margin:2px;
+.btn-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
 
-    border: #282c34 solid 1px;
-    background-color: rgb(230, 226, 235);
-    color:#282c34;
+    margin-top:10%;
 }
 
+.GameOverButton{
+
+    height:10%;
+    width:100%;
+    margin:5px;
+
+    border: #282c34 solid 1px;
+    background-color: rgb(251, 251, 251);
+    color:#282c34;
+
+}
+.GameOverButton:hover{
+    background-color: rgb(219, 218, 218);
+}
 #GameOverText{
     margin-bottom: 2px;
     font-size: 8vh;
@@ -31,4 +46,16 @@
 
 #ScoreText{
     margin-bottom: 5px;
+}
+
+.Form{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+   background-color: lightgray;
+   border: 2px solid #282c34;
+
 }
