--- a/equle-frontend/src/components/main/LeaderboardOverlay.css
+++ b/equle-frontend/src/components/main/LeaderboardOverlay.css
@@ -5,15 +5,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-
+    
     border: 5px solid #282c34;
     background-color: rgb(252, 249, 254);
 }
 
 .Header{
     width: 99%;
-
+    min-height: 10%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -22,6 +21,23 @@
     padding: 1%;
 
     border-bottom:2px solid #282c34;
+}
+
+.RankingList{
+    min-width: 100%;
+    min-height: 77%;
+
+    display: grid;
+    /*
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+    */
+    grid-row-start: 1;
+    grid-row-end: 10;
+    
+    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: column;
 }
 
 .Exit-Btn-Div{
