--- a/equle-frontend/src/components/main/LeaderboardOverlay.css
+++ b/equle-frontend/src/components/main/LeaderboardOverlay.css
@@ -6,38 +6,37 @@
     flex-direction: column;
     justify-content: flex-start;
     
-    border: 5px solid #282c34;
-    background-color: rgb(252, 249, 254);
+    
+    border: 3px solid #282c34;
+    background-color: rgb(186, 213, 253);
 }
 
 .Header{
-    width: 99%;
+    width: 100%;
     min-height: 10%;
+
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
-    padding: 1%;
 
     border-bottom:2px solid #282c34;
 }
 
 .RankingList{
     min-width: 100%;
-    min-height: 77%;
+    min-height: 77.5%;
 
     display: grid;
-    /*
+    
     grid-column-start: 1;
-    grid-column-end: 3;
-
-    */
+    grid-column-end: 1;
+    
     grid-row-start: 1;
     grid-row-end: 10;
-    
-    grid-auto-columns: minmax(0, 1fr);
-    grid-auto-flow: column;
+
+    margin-top:1%;
+    margin-bottom:2%;
 }
 
 .Exit-Btn-Div{
@@ -59,4 +58,5 @@
 }
 #Title{
     font-size: 10vh;
+    text-align: center;
 }
