--- a/equle-frontend/src/components/main/GameOverOverlay.css
+++ b/equle-frontend/src/components/main/GameOverOverlay.css
@@ -31,6 +31,8 @@
     width:100%;
     margin:5px;
 
+    font-size: large;
+
     border: #282c34 solid 1px;
     background-color: rgb(251, 251, 251);
     color:#282c34;
@@ -48,6 +50,11 @@
     margin-bottom: 5px;
 }
 
+.LeaderboardForm{
+    margin:0;
+    padding:0;
+}
+
 .Form{
 
     display: flex;
@@ -58,4 +65,37 @@
    background-color: lightgray;
    border: 2px solid #282c34;
 
+   margin:0;
+   padding:0;
+}
+
+.Form label{
+    text-align: center;
+    font-size:large;
+    font-weight: bolder;
+    
+    margin-top:10px;
+    padding:0;
+    width:100%;
+}
+
+.Form input[type=text]{
+    
+    padding:0;
+    width:75%;
+    font-size: large;
+    margin: 10px auto;
+}
+
+.Form input[type=button]{
+    
+    padding:0;
+    width:50%;
+    font-size:medium;
+    margin: 0 auto;
+    margin-bottom:10px;
+
+    background-color: rgb(251, 251, 251);
+    color:#282c34;
+    border-width: 1px;
 }
