--- a/equle-frontend/src/App.css
+++ b/equle-frontend/src/App.css
@@ -12,6 +12,8 @@
   font-size: calc(10px + 2vmin);
   color: #282c34;
   margin:0;
+
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .Spacer{
