Various minor visual changes / bug fixes

--- a/equle-frontend/src/App.css
+++ b/equle-frontend/src/App.css
@@ -8,7 +8,7 @@
   
   justify-content:flex-start;
 
-  background-color: whitesmoke;
+  background-color: rgb(230, 226, 235);
   font-size: calc(10px + 2vmin);
   color: #282c34;
   margin:0;
