--- a/equle-frontend/src/components/sidebar/Sidebar.css
+++ b/equle-frontend/src/components/sidebar/Sidebar.css
@@ -17,6 +17,7 @@
 .Sidebar {
     background-color: #282c34;
     color:white;
+    border-right:2px solid #282c34;
 
     /*Change .Extended width when changing this width*/
     min-width: 10vh;
@@ -40,26 +41,41 @@
     max-width:80%;
     max-height:8%;
 
+    background-repeat: no-repeat;
+    background-size: 8vh 8vh;
+    
     background-color: #282c34;
     background-size: cover;
     
     margin-top:10px;
     margin-bottom:10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    /*padding-left: 10px;
+    padding-right: 10px;*/
+    padding:15px;
     border:none;
 }
 
+/*
 .Sidebar-btn:hover{
-    background-color: #a3a3a3;
+    background-color: #545558;
 }
+*/
 
 #Sidebar-overlay-horz-btn{
-    background-image: url('./menu_hamburger_icon.png');
+    background-image: url('./question-mark.png');
+    
+}
+
+#Sidebar-overlay-horz-btn:hover{
+    background-image: url('./question-mark-highlighted.png');
 }
 
 #Sidebar-leaderboard-btn{
     background-image: url('./leaderboard_icon.png');
+}
+
+#Sidebar-leaderboard-btn:hover{
+    background-image: url('./leaderboard_icon_highlighted.png');
 }
 
 /*Extended Sidebar*/
