--- a/equle-frontend/src/components/main/RulesOverlay.css
+++ b/equle-frontend/src/components/main/RulesOverlay.css
@@ -1,18 +1,18 @@
 /*Extended Sidebar*/
 .RulesOverlay{
     /*width is 100 - .Sidebar width*/
-    min-width:80%;
-    min-height: 80%;
+    width:80%;
+    height: 60%;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 
-    padding:2%;
+    padding:5%;
 
     background-color: #a3a3a3;
-    border-right:2px solid #282c34;
-    border-left-style: none;
+    border: 3px solid #282c34;
+    
 }
 
 .Textbox{
