Rules exit button

--- a/equle-frontend/src/components/main/LeaderboardOverlay.css
+++ b/equle-frontend/src/components/main/LeaderboardOverlay.css
@@ -57,8 +57,8 @@
 }
 
 .Exit-Btn{
-    background-color: rgb(252, 249, 254);
-    color:red;
+    background-color: #a3a3a3;
+    color:#282c34;
     border:none;
 }
 
