--- a/equle-frontend/src/components/main/RulesOverlay.css
+++ b/equle-frontend/src/components/main/RulesOverlay.css
@@ -8,7 +8,10 @@
     flex-direction: column;
     justify-content: flex-start;
 
-    padding:5%;
+    padding-top:5px;
+    padding-left:10px;
+    padding-right:10px;
+    padding-bottom:5%;
 
     background-color: #a3a3a3;
     border: 3px solid #282c34;
@@ -35,4 +38,22 @@
     max-height: 60%;
 
     font-size: 2vmin;
+}
+
+.Exit-Btn-Div{
+    width:100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.Exit-Btn{
+    background-color: #282c34;
+    color:#a3a3a3;
+    border:none;
+}
+
+.Exit-Btn:hover{
+    background-color: #636262;
 }
