--- a/equle-frontend/src/components/main/RulesOverlay.css
+++ b/equle-frontend/src/components/main/RulesOverlay.css
@@ -2,16 +2,14 @@
 .RulesOverlay{
     /*width is 100 - .Sidebar width*/
     width:80%;
-    height: 60%;
+    height: fit-content;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 
-    padding-top:5px;
-    padding-left:10px;
-    padding-right:10px;
-    padding-bottom:5%;
+    
+    padding-bottom:20px;
 
     background-color: #a3a3a3;
     border: 3px solid #282c34;
@@ -19,6 +17,8 @@
 }
 
 .Textbox{
+    padding-top:5px;
+    padding-bottom:5px;
     min-height:100%;
 
     width:calc(fit-content+100px);
@@ -27,17 +27,30 @@
     flex-direction: column;
     justify-content: space-between;
 
-    font-size: calc(6px + 2vmin);
+    font-size: calc(1.5vw);
+
+    overflow-y: hidden;
+
+    
+    /*font-size:14px;*/
 }
 
 .Heading{
-    font-size: calc(6px + 2vmin);
+    font-size: calc(2vw);
 }
 
 .Rules{
-    max-height: 60%;
 
-    font-size: 2vmin;
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding:5px 20px;
+
+    
 }
 
 .Exit-Btn-Div{
@@ -46,14 +59,43 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+
+    background-color: #282c34;
+
+    
 }
 
 .Exit-Btn{
     background-color: #282c34;
     color:#a3a3a3;
     border:none;
+    padding:1px 2px;
+
+    height: fit-content;
 }
 
 .Exit-Btn:hover{
     background-color: #636262;
+}
+
+.Author-section{
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    padding-bottom:5px;
+
+    border-top: 3px solid #282c34;
+}
+
+.RulesSection .Heading{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    text-decoration: underline;
 }
