--- a/equle-frontend/src/components/main/Main.css
+++ b/equle-frontend/src/components/main/Main.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:center;
+    justify-content:flex-start;
 
     padding: 10px;
     padding-left:10%;
@@ -21,6 +21,16 @@
 .Main-Div{
     padding:2px;
     margin-bottom:0%;
+}
+
+.Main-Body{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height:100%;
+    width: 100%;
 }
 
 #Title{
